--- a/Index.html
+++ b/Index.html
@@ -104,7 +104,7 @@
 
             <button class="twitch-login" id="twitchLogin">
                 <span class="twitch-icon">📺</span>
-                LOG IN WITH TWITCH
+                LOG IN WITH GOOGLE
             </button>
         </div>
     </div>
