--- a/index.html
+++ b/index.html
@@ -175,12 +175,93 @@
     </div>
     <!---------------------------------------------------------------------------------------->
     <!--Página main ------------------------------------------------------------------------->
-    <main class="main-content">
-        <div class="hero-section">
-            <h1 class="hero-title">Descubra seu novo local de lazer!</h1>
-            <p class="hero-subtitle">Resultados incríveis, baseados em suas preferências</p>
+    <!-- Hero Section -->
+    <section class="hero-section">
+        <div class="hero-content">
+            <h1 class="hero-title"><br>Descubra seu novo local de lazer!</h1>
+            <p class="hero-subtitle">Resultados incríveis, baseados em suas preferências</p><br><br>
+            <button class="hero-cta" id="mainPageButton">Começar Agora</button>
         </div>
-    </main>
+    </section>
+
+    <!-- About Section -->
+    <section class="about-section">
+        <div class="about-container">
+            <div class="about-content">
+                <h2>Acerca de nós:</h2>
+                <p class="about-text">
+                    Somos uma equipe dedicada a transformar seus sonhos em realidade, proporcionando experiências únicas e inesquecíveis.
+                </p>
+            </div>
+            <div class="about-image">
+                Experiências Únicas
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-content">
+                <div class="footer-brand">
+                    <div class="brand-info">
+                        <div class="logo-icon"><img src="images/Icone sem fundo.png" alt="Icone do LocalSeek"></div>
+                        <div class="brand-name">Local Seek</div>
+                    </div>
+                    <p class="footer-description">
+                        Descubra os melhores locais de lazer com recomendações personalizadas.
+                    </p>
+                    <div class="social-links">
+                        <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                        <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                        <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+
+                <div class="footer-links">
+                    <h4>Links</h4>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Sobre</a></li>
+                        <li><a href="#">Consultas</a></li>
+                        <li><a href="#">Histórico</a></li>
+                        <li><a href="#">Contato</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-contact">
+                    <h4>Contato</h4>
+                    <div class="contact-info">
+                        <div class="contact-item">
+                            <i class="fas fa-envelope"></i>
+                            contato@localseek.com
+                        </div>
+                        <div class="contact-item">
+                            <i class="fas fa-phone"></i>
+                            (11) 9999-9999
+                        </div>
+                        <div class="contact-item">
+                            <i class="fas fa-map-marker-alt"></i>
+                            São Paulo, SP
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="footer-bottom">
+                <div class="copyright">
+                    © 2025 Local Seek. Todos os direitos reservados.
+                </div>
+                <div class="footer-bottom-links">
+                    <a href="#">Privacidade</a>
+                    <a href="#">Termos</a>
+                    <a href="#">FAQ</a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
     <!---------------------------------------------------------------------------------------->
     <!-- Code injected by live-server -->
     <script>
