--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <i class="icon"><img id="dropdownicon" src="images/icon4.png"></i>
                     <p id="textIcon">Descubra sua viagem</p>
                 </a>
-                <a href="#" class="menu-item">
+                <a href="historico.html" class="menu-item">
                     <i class="icon"><img id="dropdownicon" src="images/icon6.png"></i>
                     <p id="textIcon">Histórico</p>
                 </a>
