--- a/historico.html
+++ b/historico.html
@@ -9,7 +9,7 @@
     <link href="CSS/style.css" rel="stylesheet">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
-    <script src="scripts/main.js" defer></script>
+    <script src="scripts/main.js"></script>
 </head>
 <body>
     <!-- NavBar ------------------------------------------------------------------------------->
@@ -203,4 +203,5 @@
         });
     </script>
 </body>
+
 </html>
