--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="CSS/style.css" rel="stylesheet">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
-    <script src="scripts/main.js" defer></script>
+    <script src="scripts/main.js"></script>
 </head>
 
 <body>
@@ -302,5 +302,6 @@
         // ]]>
     </script>
 </body>
+
 
 </html>
