--- a/historico.html
+++ b/historico.html
@@ -693,7 +693,7 @@
             if (confirm('Tem certeza que deseja sair?')) {
                 console.log('Fazendo logout...');
                 alert('Saindo... Redirecionando para página inicial.');
-                window.location.href = "teste.html"
+                window.location.href = "index.html"
                 // Em uma aplicação real, faria logout e redirecionaria
             }
         }
