paginas webs add
Adicionadas as páginas web mais atualizadas

--- a/loginPage.html
+++ b/loginPage.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="CSS/styleLoginPage.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
-    <script src="Scripts/main.js"></script>
+    <script src="Scripts/jsLogin.js"></script>
 </head>
 <body>
     <div class="container">
@@ -33,7 +33,6 @@
                 <div class="form-group">
                     <label for="email">Email</label>
                     <div class="input-wrapper">
-                        <span class="input-icon email"></span>
                         <input 
                             type="email" 
                             id="email" 
@@ -48,7 +47,6 @@
                 <div class="form-group">
                     <label for="password">Senha</label>
                     <div class="input-wrapper">
-                        <span class="input-icon lock"></span>
                         <input 
                             type="password" 
                             id="password" 
