--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="pt-BR">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8">  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Local Seek - Descubra Seu Próximo Destino</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="CSS/styleIndexmain.css">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
+   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" /> 
+   <link rel = "icon" href = "images/Icone sem fundo.png">
 </head>
 
 <body>
@@ -43,19 +43,19 @@
 
             <div class="features-grid">
                 <div class="feature-card">
-                    <div class="feature-icon climate">📍</div>
+                    <div class="feature-icon climate"><span class="material-symbols-outlined index_icon">weather_hail</span></div>
                     <h3>Clima Ideal</h3>
                     <p>Encontre destinos com o clima que mais combina com você, seja tropical, temperado ou frio.</p>
                 </div>
 
                 <div class="feature-card">
-                    <div class="feature-icon landscape">🏞️</div>
+                    <div class="feature-icon landscape"><span class="material-symbols-outlined index_icon">landscape</span></div>
                     <h3>Paisagem Perfeita</h3>
                     <p>Desde praias paradisíacas até montanhas majestosas, encontre a paisagem dos seus sonhos.</p>
                 </div>
 
                 <div class="feature-card">
-                    <div class="feature-icon population">👥</div>
+                    <div class="feature-icon population"><span class="material-symbols-outlined index_icon">group</span></div>
                     <h3>Nível Populacional</h3>
                     <p>Prefere lugares movimentados ou tranquilos? Personalizamos conforme seu estilo.</p>
                 </div>
@@ -81,7 +81,6 @@
                 <h3>Local Seek</h3>
                 <p>Descubra destinos incríveis personalizados para suas preferências de viagem.</p>
             </div>
-            <hr>
             <div class="footer-bottom">
                 <p>&copy; 2025 Local Seek. Todos os direitos reservados.</p>
                 <div class="footer-bottom-links">
