--- a/loginPage.html
+++ b/loginPage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +11,9 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
     <script src="Scripts/jsLogin.js"></script>
+    <link rel = "icon" href = "images/Icone sem fundo.png">
 </head>
+
 <body>
     <div class="container">
         <a href="index.html" class="back-button" onclick="goBack()">
@@ -19,57 +22,46 @@
 
         <div class="form-container">
             <div class="logo">Local Seek</div>
-            
             <div class="form-header">
                 <h1>Entrar na sua conta</h1>
                 <p>Faça login para descobrir destinos incríveis</p>
             </div>
 
-            <div class="error-message" id="errorMessage">
-                Email ou senha incorretos. Tente novamente.
-            </div>
-
-            <form id="loginForm" onsubmit="handleLogin(event)">
+            <!-- Formulário -->
+            <form id="loginForm" method="post" action="PHP/login.php">
                 <div class="form-group">
                     <label for="email">Email</label>
                     <div class="input-wrapper">
-                        <input 
-                            type="email" 
-                            id="email" 
-                            name="email" 
-                            class="form-input" 
-                            placeholder="seu.email@exemplo.com"
-                            required
-                        >
+                        <input type="email" id="email" name="email" class="form-input"
+                            placeholder="seu.email@exemplo.com" required>
                     </div>
                 </div>
 
                 <div class="form-group">
-                    <label for="password">Senha</label>
+                    <label for="senha">Senha</label>
                     <div class="input-wrapper">
-                        <input 
-                            type="password" 
-                            id="password" 
-                            name="password" 
-                            class="form-input" 
-                            placeholder="••••••••"
-                            required
-                        >
+                        <input type="password" id="senha" name="senha" class="form-input" placeholder="••••••••"
+                            required>
+                    </div><br>
+                    <div class="error-message" id="errorMessage">
+                        Email ou senha incorretos. Tente novamente.
                     </div>
                     <div class="forgot-password">
                         <a href="#" onclick="forgotPassword()">Esqueceu a senha?</a>
                     </div>
                 </div>
 
-                <button type="submit" class="btn-login" id="loginBtn" onclick="loginDirecionadoPerfil()">
+                <button type="submit" class="btn-login" id="loginBtn">
                     Entrar
                 </button>
             </form>
 
+            <!-- Botão do Não tem Conta? -->
             <div class="signup-link">
                 Não tem uma conta? <a href="signupPage.html">Criar conta</a>
             </div>
         </div>
     </div>
 </body>
+
 </html>
