--- a/suggestionPage.html
+++ b/suggestionPage.html
@@ -1,6 +1,18 @@
+<!-- PHP para aparecer o nome, email e as iniciais no dropdown-->
+<?php
+session_start();
+if (!isset($_SESSION["nome"])) {
+    header("Location: ../loginPage.html");
+    exit();
+}
+$nome = $_SESSION["nome"];
+$email = $_SESSION["email"];
+$inicial = strtoupper(substr($nome, 0, 1));
+?>
+
+<!-- HTML do site (estrutura)-->
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,10 +21,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="CSS/styleSuggestionPage.css">
     <link rel="stylesheet" href="CSS/styleHistoricomain.css">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" /> 
     <script src="Scripts/jsSuggestion.js"></script>
     <script src="Scripts/jsHistorico.js"></script>
+    <link rel = "icon" href = "images/Icone sem fundo.png">
 </head>
 
 <body>
@@ -23,9 +35,9 @@
 
             <nav>
                 <ul class="nav-menu" id="navMenu">
-                    <li><a href="#" onclick="showFeature('Home')">Home</a></li>
+                    <li><a href="home.php">Home</a></li>
                     <li><a href="#" class="active">Sugestões de Viagens</a></li>
-                    <li><a href="historico.html">Histórico de Viagens</a></li>
+                    <li><a href="historico.php">Histórico de Viagens</a></li>
                 </ul>
             </nav>
 
@@ -38,41 +50,37 @@
                 <button class="profile-trigger" id="profileTrigger" onclick="toggleProfileDropdown()">
                     <div class="profile-avatar" id="profileAvatar">
                         <div class="status-indicator"></div>
+                        <?= $inicial ?>
                     </div>
-                    <div class="profile-info">
-                        <div class="profile-name" id="profileName">bvc</div>
-                        <div class="profile-email" id="profileEmail">fdgd@$DAD</div>
-                    </div>
-                    <span class="dropdown-arrow">▼</span>
                 </button>
 
                 <div class="dropdown-menu" id="profileDropdown">
                     <div class="dropdown-header">
                         <div class="dropdown-user-info">
-                            <div class="dropdown-avatar" id="dropdownAvatar">B</div>
+                            <div class="dropdown-avatar" id="dropdownAvatar"><?= $inicial ?></div>
                             <div class="dropdown-user-details">
-                                <h3 id="dropdownName">Usuário</h3>
-                                <p id="dropdownEmail">email@example.com</p>
+                                <h3 id="dropdownName"><?= htmlspecialchars($nome) ?></h3>
+                                <p id="dropdownEmail"><?= htmlspecialchars($email) ?></p>
                             </div>
                         </div>
                     </div>
 
-                    <a href="#" class="dropdown-item" onclick="showFeature('perfil')">
-                        <span class="dropdown-icon">👤</span>
+                   <a href="#" class="dropdown-item" onclick="showFeature('perfil')">
+                        <span class="dropdown-icon"><span class="material-symbols-outlined">person</span></span>
                         Perfil
                     </a>
 
                     <div class="dropdown-divider"></div>
 
                     <a href="#" class="dropdown-item" onclick="showFeature('feedback')">
-                        <span class="dropdown-icon">💬</span>
+                        <span class="dropdown-icon"><span class="material-symbols-outlined">feedback</span></span>
                         Enviar Feedback
                     </a>
 
                     <div class="dropdown-divider"></div>
 
                     <a href="#" class="dropdown-item danger" onclick="logout()">
-                        <span class="dropdown-icon">🚪</span>
+                        <span class="dropdown-icon"><span class="material-symbols-outlined">logout</span></span>
                         Sair
                     </a>
                 </div>
@@ -80,16 +88,16 @@
         </div>
     </header>
 
-    <!-- Main Content -->
+    <!-- Conteúdo Principal -->
     <main class="main-content">
         <section class="hero-section">
-            <div class="hero-icon">✈️</div>
             <h1 class="hero-title">Sugestões Personalizadas</h1>
             <p class="hero-description">
                 Baseadas no seu perfil e preferências, selecionamos os destinos perfeitos para você
             </p>
         </section>
-        <!-- Filters -->
+        
+        <!-- Filtros -->
         <section class="filters-section">
             <div class="filters-header">
                 <i class="fas fa-filter filters-icon"></i>
@@ -116,8 +124,8 @@
 
                 <div class="filter-group">
                     <label class="filter-label">
-                        <i class="fas fa-calendar-alt"></i>
-                        Duração
+                        <img id = "weather" src = "images/weather.png">
+                        Clima
                     </label>
                     <select class="filter-select">
                         <option>Selecione</option>
@@ -130,8 +138,8 @@
 
                 <div class="filter-group">
                     <label class="filter-label">
-                        <i class="fas fa-map-marker-alt"></i>
-                        Tipo de Viagem
+                        <img id = "weather" src = "images/landscape.png">
+                        Paisagem
                     </label>
                     <select class="filter-select">
                         <option>Selecione</option>
@@ -146,7 +154,7 @@
                 <div class="filter-group">
                     <label class="filter-label">
                         <i class="fas fa-users"></i>
-                        Companhia
+                        Popularidade
                     </label>
                     <select class="filter-select">
                         <option>Selecione</option>
@@ -165,147 +173,11 @@
             </button>
         </section>
 
-        <!-- Content -->
+        <!-- Content - Tirar do Comentário depois da API pronta
         <section class="suggestions-section">
-            <h2 class="section-title">Suas Sugestões Personalizadas</h2>
+            <h2 class="section-title">Suas Sugestões Personalizadas</h2> -->
 
             <!-- Cards Suggestions-->
-            <div class="suggestions-grid">
-                <div class="suggestion-card">
-                    <div class="card-image" style="background: linear-gradient(135deg, #4A90E2 0%, #7B68EE 100%);">
-                        <div class="match-badge">
-                            <span>⭐</span>
-                            95% match
-                        </div>
-                        <div class="price-tag">R$ 3.800</div>
-                    </div>
-
-                    <div class="card-content">
-                        <div class="card-header">
-                            <div>
-                                <h3 class="card-title">Aventura nos Alpes</h3>
-                                <div class="card-location">
-                                    <i class="fas fa-map-marker-alt"></i>
-                                    Interlaken, Suíça
-                                </div>
-                            </div>
-                            <div class="card-rating">
-                                <span>⭐</span>
-                                4.9
-                            </div>
-                        </div>
-
-                        <p class="card-description">
-                            Perfeito para amantes de aventura! Trilhas incríveis, parapente e vistas espetaculares das
-                            montanhas suíças.
-                        </p>
-
-                        <div class="card-footer">
-                            <div class="duration-info">
-                                <i class="fas fa-clock"></i>
-                                8 dias
-                            </div>
-                            <button class="explore-btn">Explorar</button>
-                        </div>
-
-                        <div class="tags">
-                            <span class="tag">Aventura</span>
-                            <span class="tag">Montanha</span>
-                            <span class="tag">Esportes</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="suggestion-card">
-                    <div class="card-image" style="background: linear-gradient(135deg, #FF6B6B 0%, #FF8E53 100%);">
-                        <div class="match-badge">
-                            <span>💕</span>
-                            88% match
-                        </div>
-                        <div class="price-tag">R$ 2.900</div>
-                    </div>
-
-                    <div class="card-content">
-                        <div class="card-header">
-                            <div>
-                                <h3 class="card-title">Romance em Florença</h3>
-                                <div class="card-location">
-                                    <i class="fas fa-map-marker-alt"></i>
-                                    Toscana, Itália
-                                </div>
-                            </div>
-                            <div class="card-rating">
-                                <span>⭐</span>
-                                4.8
-                            </div>
-                        </div>
-
-                        <p class="card-description">
-                            Uma experiência romântica única entre arte renascentista, vinhos especiais e paisagens de
-                            tirar o fôlego.
-                        </p>
-
-                        <div class="card-footer">
-                            <div class="duration-info">
-                                <i class="fas fa-clock"></i>
-                                6 dias
-                            </div>
-                            <button class="explore-btn">Explorar</button>
-                        </div>
-
-                        <div class="tags">
-                            <span class="tag">Romance</span>
-                            <span class="tag">Arte</span>
-                            <span class="tag">Cultura</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="suggestion-card">
-                    <div class="card-image" style="background: linear-gradient(135deg, #4ECDC4 0%, #44A08D 100%);">
-                        <div class="match-badge">
-                            <span>🏖️</span>
-                            92% match
-                        </div>
-                        <div class="price-tag">R$ 4.500</div>
-                    </div>
-
-                    <div class="card-content">
-                        <div class="card-header">
-                            <div>
-                                <h3 class="card-title">Relax em Bora Bora</h3>
-                                <div class="card-location">
-                                    <i class="fas fa-map-marker-alt"></i>
-                                    Polinésia Francesa
-                                </div>
-                            </div>
-                            <div class="card-rating">
-                                <span>⭐</span>
-                                5.0
-                            </div>
-                        </div>
-
-                        <p class="card-description">
-                            O destino perfeito para relaxar em águas cristalinas, bangalôs sobre o mar e pôr do sol
-                            inesquecível.
-                        </p>
-
-                        <div class="card-footer">
-                            <div class="duration-info">
-                                <i class="fas fa-clock"></i>
-                                7 dias
-                            </div>
-                            <button class="explore-btn">Explorar</button>
-                        </div>
-
-                        <div class="tags">
-                            <span class="tag">Relax</span>
-                            <span class="tag">Praia</span>
-                            <span class="tag">Luxo</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </section>
     </main>
     <!-- Footer -->
@@ -315,13 +187,12 @@
                 <h3>Local Seek</h3>
                 <p>Descubra destinos incríveis personalizados para suas preferências de viagem.</p>
             </div>
-            <hr>
             <div class="footer-bottom">
                 <p>&copy; 2025 Local Seek. Todos os direitos reservados.</p>
                 <div class="footer-bottom-links">
-                    <a href="#">Home</a>
+                    <a href="home.php">Home</a>
                     <a href="#">Destinos</a>
-                    <a href="#">Histórico</a>
+                    <a href="historico.php">Histórico</a>
                 </div>
             </div>
         </div>
